force-app/main/default/objects/Contact/fields/Salesforce_Patch__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Patch__c</fullName>
    <inlineHelpText>Link to XLS or Quip for this team/AE&apos;s list of accounts</inlineHelpText>
    <label>Salesforce Patch</label>
    <type>Url</type>
</CustomField>