force-app/main/default/objects/Contact/fields/Salesforce_Relationship_Level__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Relationship_Level__c</fullName>
    <label>Salesforce Relationship Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Salesforce</fullName>
            </value>
            <value>
                <fullName>Unaware</fullName>
            </value>
            <value>
                <fullName>Targeted for Alignment</fullName>
            </value>
            <value>
                <fullName>First Introduction</fullName>
            </value>
            <value>
                <fullName>Aligned</fullName>
            </value>
            <value>
                <fullName>First Active Pursuit</fullName>
            </value>
            <value>
                <fullName>Closed Business</fullName>
            </value>
            <value>
                <fullName>Actively Referring</fullName>
            </value>
            <value>
                <fullName>Top Partner</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>