force-app/main/default/objects/Contact/fields/Salesforce_Role__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Role__c</fullName>
    <label>Salesforce Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>EVP</fullName>
            </value>
            <value>
                <fullName>SVP</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>AVP</fullName>
            </value>
            <value>
                <fullName>RVP</fullName>
            </value>
            <value>
                <fullName>PSM</fullName>
            </value>
            <value>
                <fullName>PAM</fullName>
            </value>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>