force-app/main/default/objects/Contact/fields/Salesforce_Segment__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Segment__c</fullName>
    <inlineHelpText>What segment does this contact target</inlineHelpText>
    <label>Salesforce Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Start &amp; Enterprise: Combined segment</fullName>
            </value>
            <value>
                <fullName>Strategic (STRAT): Top Accounts, highest ACV</fullName>
            </value>
            <value>
                <fullName>Enterprise: 4501+ employees</fullName>
            </value>
            <value>
                <fullName>Mid Commercial (CMRCL): 201 - 4500 employees</fullName>
            </value>
            <value>
                <fullName>Small &amp; Midsize Business Segment (SMB): &lt;200 employees</fullName>
            </value>
            <value>
                <fullName>Growth Business (GRB): 45 - 199 employees</fullName>
            </value>
            <value>
                <fullName>Small Business (SB): 0 - 45 employees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>