force-app/main/default/objects/Contact/fields/Salesforce_Technology__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Technology__c</fullName>
    <inlineHelpText>What Salesforce technology(s) does this contact service?</inlineHelpText>
    <label>Salesforce Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Salesforce: All</fullName>
            </value>
            <value>
                <fullName>MuleSoft: All</fullName>
            </value>
            <value>
                <fullName>MuleSoft: Automation</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>DataCloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>