force-app/main/default/objects/Contact/fields/Score_Caboodle__c.field-meta.xml
<CustomField>
    <fullName>Score_Caboodle__c</fullName>
    <label>Score - Caboodle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>