force-app/main/default/objects/Contact/fields/Score_Salesforce_with_Tableau__c.field-meta.xml
<CustomField>
    <fullName>Score_Salesforce_with_Tableau__c</fullName>
    <label>Score - Salesforce, with Tableau</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>