force-app/main/default/objects/Contact/fields/Score_SAP_BOE_Tech_Heads__c.field-meta.xml
<CustomField>
    <fullName>Score_SAP_BOE_Tech_Heads__c</fullName>
    <label>Score - SAP BOE Tech Heads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>