force-app/main/default/objects/Contact/fields/SDR_Campaign_List__c.field-meta.xml
<CustomField>
    <fullName>SDR_Campaign_List__c</fullName>
    <label>SDR Campaign List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COVID ED</fullName>
            </value>
            <value>
                <fullName>COVID Re-Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>