force-app/main/default/objects/Contact/fields/Standardized_Title__c.field-meta.xml
<CustomField>
    <fullName>Standardized_Title__c</fullName>
    <label>Standardized Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>