force-app/main/default/objects/Contact/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <description>Auto populates based on the Mailing State</description>
    <formula>CASE(

UPPER(BLANKVALUE(MailingState,Account.BillingState)),

&apos;ALABAMA&apos;,&apos;Central Time (CST)&apos;,&apos;AL&apos;,&apos;Central Time (CST)&apos;,
&apos;ARKANSAS&apos;,&apos;Central Time (CST)&apos;,&apos;AR&apos;,&apos;Central Time (CST)&apos;,
&apos;ILLINOIS&apos;,&apos;Central Time (CST)&apos;,&apos;IL&apos;,&apos;Central Time (CST)&apos;,
&apos;IOWA&apos;,&apos;Central Time (CST)&apos;,&apos;IA&apos;,&apos;Central Time (CST)&apos;,
&apos;KANSAS&apos;,&apos;Central Time (CST)&apos;,&apos;KS&apos;,&apos;Central Time (CST)&apos;,
&apos;LOUISIANA&apos;,&apos;Central Time (CST)&apos;,&apos;LA&apos;,&apos;Central Time (CST)&apos;,
&apos;MINNESOTA&apos;,&apos;Central Time (CST)&apos;,&apos;MN&apos;,&apos;Central Time (CST)&apos;,
&apos;MISSISSIPPI&apos;,&apos;Central Time (CST)&apos;,&apos;MS&apos;,&apos;Central Time (CST)&apos;,
&apos;MISSOURI&apos;,&apos;Central Time (CST)&apos;,&apos;MO&apos;,&apos;Central Time (CST)&apos;,
&apos;NEBRASKA&apos;,&apos;Central Time (CST)&apos;,&apos;NE&apos;,&apos;Central Time (CST)&apos;,
&apos;NORTH DAKOTA&apos;,&apos;Central Time (CST)&apos;,&apos;ND&apos;,&apos;Central Time (CST)&apos;,
&apos;OKLAHOMA&apos;,&apos;Central Time (CST)&apos;,&apos;OK&apos;,&apos;Central Time (CST)&apos;,
&apos;SOUTH DAKOTA&apos;,&apos;Central Time (CST)&apos;,&apos;SD&apos;,&apos;Central Time (CST)&apos;,
&apos;TENNESSEE&apos;,&apos;Central Time (CST)&apos;,&apos;TN&apos;,&apos;Central Time (CST)&apos;,
&apos;TEXAS&apos;,&apos;Central Time (CST)&apos;,&apos;TX&apos;,&apos;Central Time (CST)&apos;,
&apos;WISCONSIN&apos;,&apos;Central Time (CST)&apos;,&apos;WI&apos;,&apos;Central Time (CST)&apos;,
&apos;CONNECTICUT&apos;,&apos;Eastern Time (EST)&apos;,&apos;CT&apos;,&apos;Eastern Time (EST)&apos;,
&apos;DELAWARE&apos;,&apos;Eastern Time (EST)&apos;,&apos;DE&apos;,&apos;Eastern Time (EST)&apos;,
&apos;DISTRICT OF COLUMBIA&apos;,&apos;Eastern Time (EST)&apos;,&apos;DC&apos;,&apos;Eastern Time (EST)&apos;,
&apos;FLORIDA&apos;,&apos;Eastern Time (EST)&apos;,&apos;FL&apos;,&apos;Eastern Time (EST)&apos;,
&apos;GEORGIA&apos;,&apos;Eastern Time (EST)&apos;,&apos;GA&apos;,&apos;Eastern Time (EST)&apos;,
&apos;INDIANA&apos;,&apos;Eastern Time (EST)&apos;,&apos;IN&apos;,&apos;Eastern Time (EST)&apos;,
&apos;KENTUCKY&apos;,&apos;Eastern Time (EST)&apos;,&apos;KY&apos;,&apos;Eastern Time (EST)&apos;,
&apos;MAINE&apos;,&apos;Eastern Time (EST)&apos;,&apos;ME&apos;,&apos;Eastern Time (EST)&apos;,
&apos;MARYLAND&apos;,&apos;Eastern Time (EST)&apos;,&apos;MD&apos;,&apos;Eastern Time (EST)&apos;,
&apos;MASSACHUSETTS&apos;,&apos;Eastern Time (EST)&apos;,&apos;MA&apos;,&apos;Eastern Time (EST)&apos;,
&apos;MICHIGAN&apos;,&apos;Eastern Time (EST)&apos;,&apos;MI&apos;,&apos;Eastern Time (EST)&apos;,
&apos;NEW HAMPSHIRE&apos;,&apos;Eastern Time (EST)&apos;,&apos;NH&apos;,&apos;Eastern Time (EST)&apos;,
&apos;NEW JERSEY&apos;,&apos;Eastern Time (EST)&apos;,&apos;NJ&apos;,&apos;Eastern Time (EST)&apos;,
&apos;NEW YORK&apos;,&apos;Eastern Time (EST)&apos;,&apos;NY&apos;,&apos;Eastern Time (EST)&apos;,
&apos;NORTH CAROLINA&apos;,&apos;Eastern Time (EST)&apos;,&apos;NC&apos;,&apos;Eastern Time (EST)&apos;,
&apos;OHIO&apos;,&apos;Eastern Time (EST)&apos;,&apos;OH&apos;,&apos;Eastern Time (EST)&apos;,
&apos;PENNSYLVANIA&apos;,&apos;Eastern Time (EST)&apos;,&apos;PA&apos;,&apos;Eastern Time (EST)&apos;,
&apos;RHODE ISLAND&apos;,&apos;Eastern Time (EST)&apos;,&apos;RI&apos;,&apos;Eastern Time (EST)&apos;,
&apos;SOUTH CAROLINA&apos;,&apos;Eastern Time (EST)&apos;,&apos;SC&apos;,&apos;Eastern Time (EST)&apos;,
&apos;VERMONT&apos;,&apos;Eastern Time (EST)&apos;,&apos;VT&apos;,&apos;Eastern Time (EST)&apos;,
&apos;VIRGINIA&apos;,&apos;Eastern Time (EST)&apos;,&apos;VA&apos;,&apos;Eastern Time (EST)&apos;,
&apos;WEST VIRGINIA&apos;,&apos;Eastern Time (EST)&apos;,&apos;WV&apos;,&apos;Eastern Time (EST)&apos;,
&apos;ARIZONA&apos;,&apos;Mountain Time (MST)&apos;,&apos;AZ&apos;,&apos;Mountain Time (MST)&apos;,
&apos;COLORADO&apos;,&apos;Mountain Time (MST)&apos;,&apos;CO&apos;,&apos;Mountain Time (MST)&apos;,
&apos;IDAHO&apos;,&apos;Mountain Time (MST)&apos;,&apos;ID&apos;,&apos;Mountain Time (MST)&apos;,
&apos;MONTANA&apos;,&apos;Mountain Time (MST)&apos;,&apos;MT&apos;,&apos;Mountain Time (MST)&apos;,
&apos;NEW MEXICO&apos;,&apos;Mountain Time (MST)&apos;,&apos;NM&apos;,&apos;Mountain Time (MST)&apos;,
&apos;UTAH&apos;,&apos;Mountain Time (MST)&apos;,&apos;UT&apos;,&apos;Mountain Time (MST)&apos;,
&apos;WYOMING&apos;,&apos;Mountain Time (MST)&apos;,&apos;WY&apos;,&apos;Mountain Time (MST)&apos;,
&apos;CALIFORNIA&apos;,&apos;Pacific Time (PST)&apos;,&apos;CA&apos;,&apos;Pacific Time (PST)&apos;,
&apos;NEVADA&apos;,&apos;Pacific Time (PST)&apos;,&apos;NV&apos;,&apos;Pacific Time (PST)&apos;,
&apos;OREGON&apos;,&apos;Pacific Time (PST)&apos;,&apos;OR&apos;,&apos;Pacific Time (PST)&apos;,
&apos;WASHINGTON&apos;,&apos;Pacific Time (PST)&apos;,&apos;WA&apos;,&apos;Pacific Time (PST)&apos;,
&apos;&apos;,&apos;&apos;,
&apos;Other TimeZone&apos;)</formula>
    <inlineHelpText>Auto populates based on the Mailing State</inlineHelpText>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>