force-app/main/default/objects/Contact/fields/Total_Closed_Lost_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Lost_Opportunities__c</fullName>
    <label>Total Closed Lost Opportunities</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>