force-app/main/default/objects/Contact/fields/Total_Mulesoft_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_Mulesoft_ACV__c</fullName>
    <label>Total Mulesoft ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>