force-app/main/default/objects/Contact/fields/Total_Salesforce_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_Salesforce_ACV__c</fullName>
    <label>Total Salesforce ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>