force-app/main/default/objects/Contact/fields/Utilization_Target__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Target__c</fullName>
    <label>Utilization Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>