force-app/main/default/objects/Contact/fields/Won_to_Lost__c.field-meta.xml
<CustomField>
    <fullName>Won_to_Lost__c</fullName>
    <formula>Opportunities_Closed_Won__c / Opportunities_Closed_Lost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won to Lost %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>