force-app/main/default/objects/Contact/fields/Workday_Duration__c.field-meta.xml
<CustomField>
    <fullName>Workday_Duration__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Workday Duration</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>