force-app/main/default/objects/Contact/fields/Workweek_Duration__c.field-meta.xml
<CustomField>
    <fullName>Workweek_Duration__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Workweek Duration</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>