force-app/main/default/objects/Contact/fields/Zoom_Contact_Accuracy_Grade__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Contact_Accuracy_Grade__c</fullName>
    <inlineHelpText>Zoom Contact Accuracy Grade</inlineHelpText>
    <label>Zoom Contact Accuracy Grade</label>
    <length>30</length>
    <type>Text</type>
</CustomField>