force-app/main/default/objects/Contact/fields/Zoom_Query_Name__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Query_Name__c</fullName>
    <inlineHelpText>Field used to identify the Zoom Query Name on contacts. Will be used to filter the contacts to be added to campaigns</inlineHelpText>
    <label>Zoom Query Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>