force-app/main/default/objects/Contact/fields/ZoomInfo_Contact_ExtID__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Contact_ExtID__c</fullName>
    <externalId>true</externalId>
    <label>ZoomInfo Contact ExtID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>