force-app/main/default/objects/Contact/validationRules/Must_Enter_Value_in_Resource_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Enter_Value_in_Resource_Type</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Account.Name = &quot;Caelius Consulting&quot;,
    ISPICKVAL( Resource_Type__c , &quot;&quot;),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>Resource_Type__c</errorDisplayField>
    <errorMessage>Resource Type is required for Caelius Consulting Contacts</errorMessage>
</ValidationRule>