force-app/main/default/objects/Contact/listViews/All_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>Level__c</columns>
    <columns>Last_Email_Outcome__c</columns>
    <columns>HubSpot_Last_Attempt__c</columns>
    <columns>CONTACT.ENGAGEMENT_MAP</columns>
    <columns>FPSA_Contact_Score__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>Last_Emailed_Date__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salesforce_Relationship_Level__c</field>
        <operation>equals</operation>
        <value>Targeted for Alignment,First Introduction</value>
    </filters>
    <label>All Contacts</label>
</ListView>