force-app/main/default/objects/Contact/listViews/All_Contacts_View.listView-meta.xml
<ListView>
    <fullName>All_Contacts_View</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts View</label>
</ListView>